--- a/first-test.html
+++ b/first-test.html
@@ -6,6 +6,7 @@
     <h1>Welcome to my First Web Page</h1>
     <p>
       This is a HTML page I created in Atom
+      I make websites cool. 
     </p>
   </body>
 </html>
